(Feat): Adding Gsap library

--- a/app/styles.css
+++ b/app/styles.css
@@ -23,7 +23,26 @@ ol {
   color: #1d1d1d;
 }
 
+a {
+  color: #AA91EF;
+  text-decoration: none;
+}
+
 img {
   height: auto;
   max-width: 100%;
+}
+
+/* Apply to all Body text */
+body {
+  font-family: var(--font-body), sans-serif;
+  line-height: 1.6;
+  color: #333;
+}
+
+/* Apply to all Headers */
+h1, h2, h3, h4, h5, h6 {
+  font-family: var(--font-header), serif;
+  font-weight: 700;
+  margin-bottom: 0.5rem;
 }
